# ed-sentry

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  build.rs  config.example.toml
.github/workflows/: ci.yml  release.yml
.omo/knowledges/: about-page-2026-06-30.md  afk-checklist-parser-state-2026-06-26.md  afk-risk-event-ingest.md  afk-watcher-abstraction-2026-06-26.md  broad-journal-event-support.md  cargo-reward-event-ingest.md  ci-watch-tunnel-flake-fixes.md  cli-mode-simplification.md  combat-analytics-rate-alignment.md  config-autosave-2026-06-23.md  current-project-progress-2026-06-20.md  dashboard-external-links-2026-07-01.md  dashboard-navbar-title-alignment-2026-07-03.md  dashboard-shared-kill-progress-2026-07-03.md  desktop-watch-loop-watcher-2026-06-26.md  dummy-behavior-audit.md  event-routing-level-ui-2026-06-23.md  frontend-content-inventory-mission-detail-2026-06-22.md  frontend-redesign-independent-qa-2026-06-22.md  frontend-redesign-requirements-2026-06-22.md  frontend-reference-style-alignment-2026-06-22.md  github-upstream.md  gui-readiness-2026-06-20.md  gui-webui-tauri-code-quality-rerun-fix-2026-06-20.md  gui-webui-tauri-config-split-2026-06-20.md  gui-webui-tauri-plan.md  gui-webui-tauri-review-2026-06-20.md  gui-webui-tauri-task-10-emoji-sanitizer-2026-06-20.md  gui-webui-tauri-task-10-live-dashboard-2026-06-20.md  gui-webui-tauri-task-11-clippy-fix-2026-06-20.md  gui-webui-tauri-task-11-config-edit-2026-06-20.md  gui-webui-tauri-task-11-gate-fix-2026-06-20.md  gui-webui-tauri-task-12-gate-fix-2026-06-20.md  gui-webui-tauri-task-12-webui-qa-2026-06-20.md  (+95 more)
docs/: desktop-gui-phase-one.md
reference-design/: design1.tsx  design_loading.tsx
scripts/: cloudflared-windows-amd64.sha256  cloudflared-windows-amd64.url  generate-brand-assets.mjs  generate-brand-assets.test.mjs  package-linux-x64.sh  package-windows-gnu.sh  probe-websocket.mjs  readme-download-contract.test.mjs  release-package-contract.test.mjs  release-workflow-contract.test.mjs  smoke-webui.sh  sync-release-version.mjs  sync-release-version.test.mjs  verify-gui-webui-tauri.sh  verify-packaged-webui.sh
src/: app.rs  build_info.rs  config.rs  delivery.rs  event.rs  journal.rs  lib.rs  main.rs  matrix.rs  mission.rs  monitor.rs  notifier.rs  state.rs  terminal.rs  text.rs  time.rs  web.rs
tests/: app_event_store.rs  cli_config.rs  cli_config_matrix.rs  cli_config_toml.rs  cli_config_watch.rs  cli_config_web.rs  event_parser.rs  fixture_sanity.rs  journal_discovery.rs  live_tail.rs  mission_tracker.rs  monitor_events.rs  notifier.rs  real_journal_replay.rs  replay.rs  runtime_service.rs  runtime_service_afk_checklist.rs  session_state.rs  terminal_rendering.rs  tunnel_auth.rs  tunnel_auth_manual_qa.rs  tunnel_desktop.rs  tunnel_lifecycle.rs  tunnel_provider.rs  tunnel_status.rs  warnings.rs  webui.rs
ui/: biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
(+198 files in other folders)
