[package]
name = "ed-sentry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
matrix-sdk = { version = "0.18.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Com", "Win32_System_Console", "Win32_UI_Shell"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
