[package]
name = "ed-sentry-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ed_sentry"

[[bin]]
name = "ed-sentry-core"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
getrandom = "0.3"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
notify = "8.2"
matrix-sdk = { version = "0.18.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false, features = ["custom-protocol", "wry"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "net", "fs", "sync", "process", "io-util"] }
toml = "0.8"
toml_edit = "0.22"
tower-http = { version = "0.6", features = ["cors", "fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Com", "Win32_System_Console", "Win32_UI_Shell"] }

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = ["config-json"] }

[dev-dependencies]
assert_cmd = "2"
futures-util = "0.3"
predicates = "3"
tempfile = "3"
tokio-tungstenite = "0.29"
